--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numpy = "^1.25.2"
 folium = "^0.14.0"
 geopandas = "^0.13.2"
 py2neo = "^2021.2.3"
+dbt-postgres = "^1.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
