dev: update .gitignore with dbt files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# custom gitignores
+.env
+.*.env
 
 # Created by https://www.gitignore.io/api/git,code,linux,python,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=git,code,linux,python,jupyternotebooks
@@ -160,5 +163,13 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/git,code,linux,python,jupyternotebooks
 
-.env
-.*.env
+# Created by https://www.toptal.com/developers/gitignore/api/dbt
+# Edit at https://www.toptal.com/developers/gitignore?templates=dbt
+
+### dbt ###
+target/
+dbt_modules/
+dbt_packages/
+logs/
+
+# End of https://www.toptal.com/developers/gitignore/api/dbt
