--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .env
 .*.env
 
+# vscode sql extension
+*.session.sql
+
 # Created by https://www.gitignore.io/api/git,code,linux,python,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=git,code,linux,python,jupyternotebooks
 
