--- a/dbt_pinochet/dbt_project.yml
+++ b/dbt_pinochet/dbt_project.yml
@@ -33,5 +33,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_pinochet:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    datasets:
       +materialized: view
