--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.9"
 name: pinochet
 
 services:
@@ -12,6 +12,55 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - 5433:5432
+    networks:
+      - metanet1
+  metabase:
+    image: metabase/metabase:latest
+    container_name: metabase
+    hostname: metabase
+    volumes:
+      - /dev/urandom:/dev/random:ro
+    ports:
+      - 3000:3000
+    environment:
+      MB_DB_TYPE: postgres
+      MB_DB_DBNAME: metabase
+      MB_DB_PORT: 5432
+      MB_DB_USER_FILE: /run/secrets/metabase_db_user
+      MB_DB_PASS_FILE: /run/secrets/metabase_db_password
+      MB_DB_HOST: postgres
+    networks:
+      - metanet1
+    secrets:
+      - metabase_db_password
+      - metabase_db_user
+    healthcheck:
+      test: curl --fail -I http://localhost:3000/api/health || exit 1
+      interval: 15s
+      timeout: 5s
+      retries: 5
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    hostname: postgres
+    environment:
+      POSTGRES_USER_FILE: /run/secrets/metabase_db_user
+      POSTGRES_DB: metabase
+      POSTGRES_PASSWORD_FILE: /run/secrets/metabase_db_password
+    networks:
+      - metanet1
+    secrets:
+      - metabase_db_password
+      - metabase_db_user
 
 volumes:
   pgdata:
+    driver: local
+networks:
+  metanet1:
+    driver: bridge
+secrets:
+  metabase_db_password:
+    file: services/metabase/secrets/db_password.txt
+  metabase_db_user:
+    file: services/metabase/secrets/db_user.txt
