--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,30 @@ services:
     image: postgis/postgis:15-3.4
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./services/postgis/docker-entrypoint-initdb.d/create_postgrest_roles.sh:/docker-entrypoint-initdb.d/create_postgrest_roles.sh
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD}
     ports:
       - 5433:5432
     networks:
+      - default
       - nw_pinochet
+
+  postgrest:
+    image: postgrest/postgrest:v11.2.0
+    environment:
+      PGRST_DB_URI: postgres://authenticator:${PGRST_AUTHENTICATOR_PASSWORD}@postgis:5432/${POSTGRES_DB}
+      PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD}
+      PGRST_DB_SCHEMA: api
+      PGRST_DB_ANON_ROLE: web_anon
+      PGRST_JWT_SECRET: ${PGRST_JWT_SECRET}
+    ports:
+      - 3010:3000
+    networks:
+      - default
 
 volumes:
   pgdata:
