--- a/example.env
+++ b/example.env
@@ -1,7 +1,20 @@
+# docker compose
 COMPOSE_FILE=docker-compose.yml
 
+# postgis
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=pinochet
 
+# dbt
 DBT_PROJECT_DIR=dbt_pinochet
+
+# postgrest
+PGRST_JWT_SECRET=secret
+PGRST_AUTHENTICATOR_PASSWORD=postgrest
+
+# directus
+DIRECTUS_ADMIN_EMAIL=admin@example.com
+DIRECTUS_ADMIN_PASSWORD=directus
+DIRECTUS_KEY=255d861b-5ea1-5996-9aa3-922530ec40b1
+DIRECTUS_SECRET=6116487b-cda1-52c2-b5b5-c8022c45e263
