dev: update streamlit app with basic map

--- a/docker-compose.streamlit.yml
+++ b/docker-compose.streamlit.yml
@@ -2,6 +2,10 @@ version: "3.3"
 services:
   streamlit:
     image: ghcr.io/diegoquintanav/pinochet-streamlit:latest
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     build:
       context: ./services/streamlit
     ports:
