--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ git-changelog = "^2.1.0"
 [tool.poetry.group.streamlit.dependencies]
 streamlit = "^1.26.0"
 python-decouple = "^3.8"
+psycopg2-binary = "^2.9.7"
+geopandas = "^0.13.2"
+sqlalchemy = "^2.0.20"
+pandas = "^2.1.0"
+numpy = "^1.25.2"
 
 [build-system]
 requires = ["poetry-core"]
