--- a/docker-compose.streamlit.yml
+++ b/docker-compose.streamlit.yml
@@ -6,6 +6,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: postgis
+      POSTGRES_PORT: 5432
     build:
       context: ./services/streamlit
     ports:
