--- a/services/streamlit/requirements.txt
+++ b/services/streamlit/requirements.txt
@@ -4,10 +4,15 @@ blinker==1.6.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.3.1 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.10" and python_version < "4.0"
 charset-normalizer==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
+click-plugins==1.1.1 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
+cligj==0.7.2 ; python_version >= "3.10" and python_version < "4"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+fiona==1.9.4.post1 ; python_version >= "3.10" and python_version < "4.0"
+geopandas==0.13.2 ; python_version >= "3.10" and python_version < "4.0"
 gitdb==4.0.10 ; python_version >= "3.10" and python_version < "4.0"
 gitpython==3.1.34 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and platform_machine == "aarch64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "ppc64le" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "x86_64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "amd64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "AMD64" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_machine == "WIN32"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
 importlib-metadata==6.8.0 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
@@ -20,10 +25,12 @@ packaging==23.1 ; python_version >= "3.10" and python_version < "4.0"
 pandas==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==9.5.0 ; python_version >= "3.10" and python_version < "4.0"
 protobuf==4.24.2 ; python_version >= "3.10" and python_version < "4.0"
+psycopg2-binary==2.9.7 ; python_version >= "3.10" and python_version < "4.0"
 pyarrow==13.0.0 ; python_version >= "3.10" and python_version < "4.0"
 pydeck==0.8.0 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.16.1 ; python_version >= "3.10" and python_version < "4.0"
 pympler==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+pyproj==3.6.0 ; python_version >= "3.10" and python_version < "4.0"
 pyrsistent==0.19.3 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 python-decouple==3.8 ; python_version >= "3.10" and python_version < "4.0"
@@ -32,8 +39,10 @@ pytz==2023.3 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
 rich==13.5.2 ; python_version >= "3.10" and python_version < "4.0"
 setuptools==68.1.2 ; python_version >= "3.10" and python_version < "4.0"
+shapely==2.0.1 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 smmap==5.0.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.20 ; python_version >= "3.10" and python_version < "4.0"
 streamlit==1.26.0 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.10" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0"
