--- a/dbt_pinochet/packages.yml
+++ b/dbt_pinochet/packages.yml
@@ -1,3 +1,8 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=1.0.0", "<=1.1.1"]
+  - package: calogica/dbt_expectations
+    version: [">=0.9.0", "<0.10.0"]
+    # <see https://github.com/calogica/dbt-expectations/releases/latest> for the latest version tag
+  - package: elementary-data/elementary
+    version: 0.10.2
