--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: check-yaml
-        args: ['--unsafe']
+        args: ["--unsafe"]
       - id: trailing-whitespace
       - id: detect-private-key
       - id: name-tests-test
@@ -24,6 +24,13 @@ repos:
     rev: "v0.0.283"
     hooks:
       - id: ruff
+  - repo: https://github.com/sqlfluff/sqlfluff
+    rev: 2.3.5
+    hooks:
+      - id: sqlfluff-fix
+        additional_dependencies: ["dbt-postgres", "sqlfluff-templater-dbt"]
+      - id: sqlfluff-lint
+        additional_dependencies: ["dbt-postgres", "sqlfluff-templater-dbt"]
 fail_fast: false
 files: ".*"
 exclude: "desktop.ini" # Windows
