--- a/dbt_pinochet/profiles/profiles.yml
+++ b/dbt_pinochet/profiles/profiles.yml
@@ -1,3 +1,4 @@
+---
 dbt_pinochet:
   outputs:
     dev:
@@ -33,5 +34,5 @@ dbt_pinochet:
     ddb:
       type: duckdb
       path: pinochet.duckdb
-      
-  target: ddb
+
+  target: dev
