--- a/datasets/pinochet-rettig/mapping.yarrrml.yml
+++ b/datasets/pinochet-rettig/mapping.yarrrml.yml
@@ -1,32 +1,60 @@
+---
 prefixes:
-  grel: "http://users.ugent.be/~bjdmeest/function/grel.ttl#"
-  rdfs: "http://www.w3.org/2000/01/rdf-schema#"
-  schema: "https://schema.org/"
-  d2s: "https://w3id.org/d2s/"
-  e: "http://myontology.com/"
-  dbo: "https://dbpedia.org/ontology/"
-  rettig: "https://pinochet-rettig.301621.xyz/ontology#"
-
+    grel: "http://users.ugent.be/~bjdmeest/function/grel.ttl#"
+    rdfs: "http://www.w3.org/2000/01/rdf-schema#"
+    schema: "https://schema.org/"
+    d2s: "https://w3id.org/d2s/"
+    e: "http://myontology.com/"
+    dbo: "https://dbpedia.org/ontology/"
+    rettig: "https://pinochet-rettig.301621.xyz/ontology#"
 
 mappings:
-  victims:
-    graph: rettig:Victims
-    sources:
-      - ['data/stg_pinochet__base.csv~csv']
-    s: $(individual_id)
-    po:
-      - [a, rettig:Victim]
-      - [rettig:hasFirstName, $(first_name)]
-      - [rettig:hasLastName, $(last_name)]
-      - [rettig:hasAge, $(age)]
-  locations:
-    graph: rettig:Locations
-    sources:
-      - ['data/stg_pinochet__base.csv~csv']
-    s: $(individual_id)
-    po:
-      - [a, rettig:Location]
-      - [rettig:hasLatitude, $(latitude)]
-      - [rettig:hasLongitude, $(longitude)]
-      - [rettig:isExactCoordinates, $(exact_coordinates)]
-      - [rettig:hasLocationOrder, $(location_n)]
+    victims:
+        graph: rettig:Victims
+        sources:
+            - ["data/stg_pinochet__base.csv~csv"]
+        s: $(individual_id)
+        po:
+            - [a, "rettig:Victim"]
+            - ["rettig:individualId", $(individual_id)]
+            - ["rettig:firstName", $(first_name)]
+            - ["rettig:lastName", $(last_name)]
+            - ["rettig:age", $(age), "xsd:integer"]
+    locations:
+        graph: rettig:Locations
+        sources:
+            - ["data/stg_pinochet__base.csv~csv"]
+        s: $(individual_id)
+        po:
+            - [a, "rettig:Location"]
+            - ["rettig:locationId", $(location_id)]
+            - ["rettig:latitude", $(latitude)]
+            - ["rettig:longitude", $(longitude)]
+            - ["rettig:isExactCoordinates", $(exact_coordinates)]
+            - ["rettig:locationOrder", $(location_n)]
+    events:
+        graph: rettig:Events
+        sources:
+            - ["data/stg_pinochet__base.csv~csv"]
+        s: $(individual_id)
+        po:
+            - [a, "rettig:Location"]
+            - ["rettig:locationId", $(location_id)]
+            - ["rettig:startDate", $(start_date_monthly)]
+            - ["rettig:endDate", $(end_date_monthly)]
+            - p: e:hasPersonInvolved
+              o:
+                  mapping: victims
+                  condition:
+                      function: equal
+                      parameters:
+                          - [str1, $(event_id), s]
+                          - [str2, $(individual_id), o]
+            - p: e:hasLocation
+              o:
+                  mapping: locations
+                  condition:
+                      function: equal
+                      parameters:
+                          - [str1, $(event_id), s]
+                          - [str2, $(location_id), o]
