--- a/dbt_pinochet/dbt_project.yml
+++ b/dbt_pinochet/dbt_project.yml
@@ -19,8 +19,8 @@ macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
 clean-targets: # directories to be removed by `dbt clean`
-  - "target"
-  - "dbt_packages"
+    - "target"
+    - "dbt_packages"
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -29,16 +29,19 @@ clean-targets: # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  dbt_pinochet:
-    # Config indicated by + and applies to all files under models/example/
-    datasets:
-      +materialized: view
-  ## see docs: https://docs.elementary-data.com/
-  elementary:
-    ## elementary models will be created in the schema '<your_schema>_elementary'
-    +schema: "elementary"
-    ## To disable elementary for dev, uncomment this:
-    # enabled: "{{ target.name in ['prod','analytics'] }}"
+    dbt_pinochet:
+        # Config indicated by + and applies to all files under models/example/
+        datasets:
+            +materialized: view
+            api:
+                +materialized: table
+                +tags: ["api"]
+    ## see docs: https://docs.elementary-data.com/
+    elementary:
+        ## elementary models will be created in the schema '<your_schema>_elementary'
+        +schema: "elementary"
+        ## To disable elementary for dev, uncomment this:
+        # enabled: "{{ target.name in ['prod','analytics'] }}"
 
 vars:
-  "dbt_date:time_zone": "America/Santiago"
+    "dbt_date:time_zone": "America/Santiago"
