change: fixes to docker compose deployment

--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # docker compose
-COMPOSE_FILE=docker-compose.postgis.yml
+COMPOSE_FILE=docker-compose.postgis.yml:docker-compose.fastapi.yml
 
 # postgis
 POSTGRES_USER=postgres
