--- a/services/pinochet-api/Dockerfile
+++ b/services/pinochet-api/Dockerfile
@@ -3,13 +3,13 @@
 # ---------------------------------------------------------------------------- #
 
 # Global ARG, available to all stages (if renewed)
-ARG WORKDIR="/src"
+ARG WORKDIR="/app"
 
 # global username
 ARG USERNAME=daniellopez
 ARG USER_UID=1000
 ARG USER_GID=1000
-ARG USER_HOME=/home/${USERNAME}
+ARG USER_HOME="/home/${USERNAME}"
 
 # tag used in all images
 ARG PYTHON_VERSION=3.10.9
@@ -27,13 +27,26 @@ ARG USER_UID
 ARG USER_GID
 ARG USER_HOME
 
+
+# Poetry version
+ARG POETRY_VERSION=1.7.1
+
+# Pipx version
+ARG PIPX_VERSION=1.2.1
+
 # prepare the $PATH
-ENV PATH=${USER_HOME}/.venv/bin:$PATH \
+ENV PATH=/opt/pipx/bin:${WORKDIR}/.venv/bin:$PATH \
+    PIPX_BIN_DIR=/opt/pipx/bin \
+    PIPX_HOME=/opt/pipx/home \
+    PIPX_VERSION=$PIPX_VERSION \
+    POETRY_VERSION=$POETRY_VERSION \
     PYTHONPATH=${WORKDIR} \
     # Don't buffer `stdout`
     PYTHONUNBUFFERED=1 \
     # Don't create `.pyc` files:
-    PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1 \
+    # make poetry create a .venv folder in the project
+    POETRY_VIRTUALENVS_IN_PROJECT=true
 
 # ------------------------------ add user ----------------------------- #
 
@@ -46,6 +59,15 @@ RUN mkdir -p ${USER_HOME} \
 RUN mkdir -p ${WORKDIR} \
     && chown ${USER_UID}:${USER_GID} ${WORKDIR}
 
+# -------------------------- add python dependencies ------------------------- #
+
+# Install Pipx using pip
+RUN python -m pip install --no-cache-dir --upgrade pip pipx==${PIPX_VERSION}
+RUN pipx ensurepath && pipx --version
+
+# Install Poetry using pipx
+RUN pipx install --force poetry==${POETRY_VERSION}
+
 # ---------------------------- add code specifics ---------------------------- #
 
 # Copy everything to the container, we filter out what we don't need using .dockerignore
@@ -54,20 +76,21 @@ WORKDIR ${WORKDIR}
 # make sure the user owns /src
 RUN chown -R ${USER_UID}:${USER_GID} ${WORKDIR}
 
-RUN python -m venv ${USER_HOME}/.venv
-
 # Copy only the files needed for installing dependencies
-COPY --chown=${USER_UID}:${USER_GID} requirements.txt ${WORKDIR}/
+COPY --chown=${USER_UID}:${USER_GID} pyproject.toml poetry.lock prestart.sh README.md ${WORKDIR}/
 
 # Install dependencies
-RUN pip install --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+RUN poetry install --no-root
 
-# copy the rest of the files
-COPY --chown=${USER_UID}:${USER_GID} src/* ${WORKDIR}/
+# Copy the rest of the files
+COPY --chown=${USER_UID}:${USER_GID} src ${WORKDIR}/src
 
-# finalization
+# Finalization
+RUN poetry install --only-root
+
 USER ${USERNAME}
-ENTRYPOINT ["streamlit"]
-CMD [ "run", "/src/app.py" ]
-EXPOSE 80
+
+ENTRYPOINT ["/bin/sh", "-c"]
+CMD [ "/app/prestart.sh" ]
+
+EXPOSE 8000
