--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest = "^7.4.0"
 ruff = "^0.0.284"
 shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.21.0"}
 sqlfluff-templater-dbt = "^2.3.5"
+sparqlwrapper = "^2.0.0"
 
 [tool.poetry.group.streamlit.dependencies]
 geopandas = "^0.13.2"
