--- a/datasets/pinochet-rettig/semantics/mapping.protege.properties
+++ b/datasets/pinochet-rettig/semantics/mapping.protege.properties
@@ -1,5 +1,5 @@
-#Fri Dec 08 17:40:28 CET 2023
+#Fri Dec 08 18:14:26 CET 2023
 jdbc.password=postgres
 jdbc.user=postgres
-jdbc.url=jdbc\:postgresql\://postgis\:5432/pinochet
+jdbc.url=jdbc\:postgresql\://0.0.0.0\:5433/pinochet
 jdbc.driver=org.postgresql.Driver
