new: add new simple mappings to protege
also ignore pre-commit trailing whitespace task
on obda file since it's managed by protege

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: check-yaml
         args: ["--unsafe"]
       - id: trailing-whitespace
+        exclude: "^datasets/pinochet-rettig/semantics/mapping.protege.obda"
       - id: detect-private-key
       - id: name-tests-test
         args: ["--pytest-test-first"]
