--- a/datasets/pinochet-rettig/semantics/mapping.protege.portal.toml
+++ b/datasets/pinochet-rettig/semantics/mapping.protege.portal.toml
@@ -1,4 +1,4 @@
-title="University Demo"
+title="Pinochet Rettig SPARQL endpoint"
 
 [[tabGroups]]
 
@@ -12,6 +12,6 @@ PREFIX : <http://example.org/pinochet-rettig#>
 PREFIX foaf: <http://xmlns.com/foaf/0.1/>
 
 SELECT DISTINCT ?victim ?lastName {
-  ?victim a :Victim ; :hasLastName ?lastName .
+  ?victim a :Victim ; foaf:lastName ?lastName .
 }
 """
