feature: implements simple virtual knowledge graph using ontop-vkg (#2)
* fix: remove invalid test

page can be null

* chore: update dbt deps

* new: add ontop deployment with single mapping

* change: update bad data property

remove the forward slash

* change: make compose ontop read db properties from different location

* new: add dbt-codegen to deps

* new: detach location model from attribute place and location_n

* chore: update dbt to 1.7.2

* new: add new simple mappings to protege

also ignore pre-commit trailing whitespace task
on obda file since it's managed by protege

* chore: set previous yarrrml worflow as legacy

* new: add ontop properties to .gitignore

because they contain passwords

* docs: final touches to the sparql endpoint and query examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "1.0.0rc1"
 
 [tool.poetry.dependencies]
 dbt-duckdb = "^1.6.0"
-dbt-postgres = "^1.6.5"
+dbt-postgres = "^1.7.3"
 elementary-data = "^0.10.0"
 folium = "^0.14.0"
 geopandas = "^0.13.2"
@@ -31,6 +31,7 @@ pytest = "^7.4.0"
 ruff = "^0.0.284"
 shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.21.0"}
 sqlfluff-templater-dbt = "^2.3.5"
+sparqlwrapper = "^2.0.0"
 
 [tool.poetry.group.streamlit.dependencies]
 geopandas = "^0.13.2"
