--- a/dbt_pinochet/profiles/profiles.yml
+++ b/dbt_pinochet/profiles/profiles.yml
@@ -21,6 +21,16 @@ dbt_pinochet:
             dbname: pinochet
             schema: api
 
+        pre:
+            type: postgres
+            threads: 1
+            host: "{{ env_var('DBT_DB_PINOCHET_PROD_HOST') }}"
+            port: "{{ env_var('DBT_DB_PINOCHET_PROD_PORT') }}"
+            user: "{{ env_var('DBT_DB_PINOCHET_PROD_USERNAME') }}"
+            pass: "{{ env_var('DBT_DB_PINOCHET_PROD_PASSWORD') }}"
+            dbname: "{{ env_var('DBT_DB_PINOCHET_DBNAME') }}"
+            schema: pre
+
         prod:
             type: postgres
             threads: 1
@@ -29,6 +39,6 @@ dbt_pinochet:
             user: "{{ env_var('DBT_DB_PINOCHET_PROD_USERNAME') }}"
             pass: "{{ env_var('DBT_DB_PINOCHET_PROD_PASSWORD') }}"
             dbname: "{{ env_var('DBT_DB_PINOCHET_DBNAME') }}"
-            schema: "{{ env_var('DBT_DB_PINOCHET_PROD_SCHEMA') }}"
+            schema: api
 
     target: dev
