--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/diegoquintanav/pinochet-dbt:latest
-      options: --user root # https://github.com/actions/checkout/issues/956
+    #   options: --user root # https://github.com/actions/checkout/issues/956
       volumes:
         - ${{ github.workspace }}/dbt_pinochet:/app/dbt_pinochet
     steps:
