--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -49,6 +49,11 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: debugging workdir
+        run: |
+          pwd
+          ls -la
+          ls /app/dbt_pinochet -la
       - name: run dbt deps
         run: |
           DBT_PROJECT_DIR=${{ env.DBT_PROJECT_DIR }} dbt deps
