ci: update ci 7

--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -43,21 +43,26 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/diegoquintanav/pinochet-dbt:latest
-    #   options: --user root # https://github.com/actions/checkout/issues/956
+      options: --user root # https://github.com/actions/checkout/issues/956
       volumes:
         - ${{ github.workspace }}/dbt_pinochet:/app/dbt_pinochet
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: debugging workdir
+        run: |
+          pwd
+          ls -la
+          ls /app/dbt_pinochet -la
       - name: run dbt deps
         run: |
-          dbt deps
+          DBT_PROJECT_DIR=${{ env.DBT_PROJECT_DIR }} dbt deps
       - name: run dbt build
         run: |
-          dbt build --target ${{ env.DBT_TARGET }} --profiles-dir ${{ env.DBT_PROFILES_DIR }}
+          DBT_PROJECT_DIR=${{ env.DBT_PROJECT_DIR }} dbt build --target ${{ env.DBT_TARGET }} --profiles-dir ${{ env.DBT_PROFILES_DIR }}
       - name: build single html
         run: |
-          dbt docs generate --target ${{ env.DBT_TARGET }} --profiles-dir ${{ env.DBT_PROFILES_DIR }}
+          DBT_PROJECT_DIR=${{ env.DBT_PROJECT_DIR }} dbt docs generate --target ${{ env.DBT_TARGET }} --profiles-dir ${{ env.DBT_PROFILES_DIR }}
       - name: create build artifacts
         uses: actions/upload-pages-artifact@v1
         with:
