ci: update ci 14

--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -47,9 +47,10 @@ jobs:
       - name: debugging workdir
         run: |
           ls /app/dbt_pinochet -lrs
-          echo ""
+          echo "#############"
+          ls -lrs $GITHUB_WORKSPACE
           env
-          echo ""
+          echo "#############"
           pwd
       - name: run dbt deps
         run: |
