--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -24,11 +24,11 @@ concurrency:
     cancel-in-progress: true
 
 env:
-  DBT_DB_PINOCHET_DBNAME: ${{ vars.DB_PINOCHET_DBNAME }}
-  DBT_DB_PINOCHET_HOST: ${{ vars.DB_PINOCHET_HOST }}
-  DBT_DB_PINOCHET_PORT: ${{ vars.DB_PINOCHET_PORT }}
-  DBT_DB_PINOCHET_USER: ${{ vars.DB_PINOCHET_USER }}
-  DBT_DB_PINOCHET_PASSWORD: ${{ secrets.DB_PINOCHET_PASSWORD }}
+  DBT_DB_PINOCHET_PROD_DBNAME: ${{ vars.DB_PINOCHET_DBNAME }}
+  DBT_DB_PINOCHET_PROD_HOST: ${{ vars.DB_PINOCHET_HOST }}
+  DBT_DB_PINOCHET_PROD_PORT: ${{ vars.DB_PINOCHET_PORT }}
+  DBT_DB_PINOCHET_PROD_USER: ${{ vars.DB_PINOCHET_USER }}
+  DBT_DB_PINOCHET_PROD_PASSWORD: ${{ secrets.DB_PINOCHET_PASSWORD }}
   DBT_TARGET: prod
 
 jobs:
