--- a/dbt_pinochet/profiles/profiles.yml
+++ b/dbt_pinochet/profiles/profiles.yml
@@ -9,16 +9,6 @@ dbt_pinochet:
             user: postgres
             pass: postgres
             dbname: pinochet
-            schema: dbt_dev
-
-        api:
-            type: postgres
-            threads: 1
-            host: 0.0.0.0
-            port: 5433
-            user: postgres
-            pass: postgres
-            dbname: pinochet
             schema: api
 
         pre:
@@ -42,3 +32,16 @@ dbt_pinochet:
             schema: api
 
     target: dev
+
+
+elementary:
+  outputs:
+    default:
+      type: "postgres"
+      host: "{{ env_var('DBT_DB_PINOCHET_PROD_HOST') }}"
+      port: "{{ env_var('DBT_DB_PINOCHET_PROD_PORT') | int }}"
+      user: "{{ env_var('DBT_DB_PINOCHET_PROD_USERNAME') }}"
+      pass: "{{ env_var('DBT_DB_PINOCHET_PROD_PASSWORD') }}"
+      dbname: "{{ env_var('DBT_DB_PINOCHET_PROD_DBNAME') }}"
+      schema: "api_elementary"
+      threads: 1
